<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.jvoicexml</groupId>
  <artifactId>freetts-parent</artifactId>
  <version>1.2.5-SNAPSHOT</version>
  <packaging>pom</packaging>

  <modules>
    <module>freetts</module>
    <module>en_us</module>
    <module>cmudict04</module>
    <module>cmutimelex</module>
    <module>cmulex</module>
    <module>cmu_time_awb</module>
    <module>cmu_us_kal</module>
    <module>germanlex</module>
    <module>mbrola</module>
    <module>freetts-jsapi10</module>
  </modules>

  <properties>
    <voice.directory>src/main/voices</voice.directory>
  </properties>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.11.0</version>
          <configuration>
            <release>17</release>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.2.2</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.10.1</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
</project>
